Fix glitch on overflowing absolute element

--- a/client/assets/css/styles.less
+++ b/client/assets/css/styles.less
@@ -81,7 +81,6 @@ prop-header {
     flex: 1;
     border-radius: @border_radius;
     box-shadow: 1px 1px 5px 1px @shadow_color;
-    overflow-x: hidden;
 
     .prop-tile__header {
         .text-tone('bright');
